RESOLVED FIXED153131
[mips] Fix regT2 and regT3 trampling in MacroAssembler
https://bugs.webkit.org/show_bug.cgi?id=153131
Summary [mips] Fix regT2 and regT3 trampling in MacroAssembler
Julien Brianceau
Reported 2016-01-15 08:32:53 PST
Current mips MacroAssembler implementation clobbers regT2 and regT3 because of its addrTempRegister and cmpTempRegister.
Attachments
Fix general register assignment for mips (6.05 KB, patch)
2016-01-15 08:38 PST, Julien Brianceau
no flags
Fix general register assignment for mips (6.05 KB, patch)
2016-01-15 08:40 PST, Julien Brianceau
msaboff: review-
Fix general register assignment for mips (6.61 KB, patch)
2016-01-16 00:55 PST, Julien Brianceau
msaboff: review+
Julien Brianceau
Comment 1 2016-01-15 08:38:01 PST
Created attachment 269056 [details] Fix general register assignment for mips
Julien Brianceau
Comment 2 2016-01-15 08:40:30 PST
Created attachment 269057 [details] Fix general register assignment for mips
Michael Saboff
Comment 3 2016-01-15 10:11:18 PST
Comment on attachment 269057 [details] Fix general register assignment for mips View in context: https://bugs.webkit.org/attachment.cgi?id=269057&action=review > Source/JavaScriptCore/ChangeLog:7 > + Please add a description of the change.
Julien Brianceau
Comment 4 2016-01-16 00:55:08 PST
Created attachment 269162 [details] Fix general register assignment for mips
Michael Saboff
Comment 5 2016-01-16 17:19:44 PST
Comment on attachment 269162 [details] Fix general register assignment for mips r=me
Julien Brianceau
Comment 6 2016-01-17 01:17:44 PST
Note You need to log in before you can comment on or make changes to this bug.